--- a/EshopWeb/Views/Category/Index.cshtml
+++ b/EshopWeb/Views/Category/Index.cshtml
@@ -22,6 +22,7 @@
             <th>
                 Display Order
             </th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -29,6 +30,16 @@
             <tr>
                 <td>@obj.Name</td>
                 <td>@obj.DisplayOrder</td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <i class="bi bi-trash-fill"></i> Delete
+                        </a>
+                    </div>
+                </td>
             </tr>
             }
         </tbody>
