--- a/EshopWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/EshopWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,6 +11,9 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.Id" hidden />
+            <input asp-for="Product.ImageUrl" hidden />
+            <div class="row">
+                <div class="col-10">
             <div class="border p-3">
                 <div asp-validation-summary="All"></div>
                 <div class="form-floating py-2 col-12">
@@ -61,7 +64,7 @@
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input type="file" class="form-control border-0 shadow" />
+                    <input type="file" name="file" class="form-control border-0 shadow" />
                     <label asp-for="Product.ImageUrl" class="ms-2"></label>
                 </div>
                 <div class="row pt-2">
@@ -75,6 +78,11 @@
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary border form-control">Cancel</a>
                     </div>
+                </div>
+            </div>
+                </div>
+                <div class="col-2">
+                    <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1xp solid #bbb9b9" />
                 </div>
             </div>
         </form>
