--- a/EshopWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/EshopWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 </a>
             </div>
         </div>
-        <table id="#tblData" class="table table-bordered table-striped" style="width:100%">
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
             <tr>
                 <th>Title</th>
