--- a/EshopWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/EshopWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -14,7 +14,7 @@
             <div class="py-3">
                 <div class="row">
                     <div class="col-6 col-md-2 offset-lg-1 pb-1">
-                        <a asp-for="Index" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
+                        <a asp-action="Index" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
                             <small>Back to home</small>
                         </a>
                     </div>
