implement authentication, authorization, related UI pages

--- a/EshopWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/EshopWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EshopWeb
 @using Eshop.Models
 @using Eshop.Models.ViewModels
+@using Eshop.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
