--- a/EshopWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/EshopWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using EshopWeb.Areas.Identity
 @using EshopWeb.Areas.Identity.Pages
+@using Eshop.Utility
+@using Eshop.Models
+@using Eshop.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
