--- a/EshopWeb/Views/Shared/_Layout.cshtml
+++ b/EshopWeb/Views/Shared/_Layout.cshtml
@@ -50,24 +50,13 @@
                                     <li><hr class="dropdown-divider"></li>
                                 </ul>
                             </li>
-                        }
-                        @if (HttpContextAccessor.HttpContext.Session.GetInt32(StaticDetails.SessionCart) != null)
-                        {
+                        }                     
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                                    <i class="bi bi-cart"></i> &nbsp;
-                                    (@HttpContextAccessor.HttpContext.Session.GetInt32(StaticDetails.SessionCart))
+                                    @await Component.InvokeAsync("ShoppingCart")
                                 </a>
                             </li>
-                        } else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                                    <i class="bi bi-cart"></i> &nbsp;
-                                    (0)
-                                </a>
-                            </li>
-                        }
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
