--- a/EshopWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/EshopWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,6 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.Id" hidden />
-            <input asp-for="Product.ImageUrl" hidden />
             <div class="row">
                 <div class="col-10">
             <div class="border p-3">
@@ -64,8 +63,8 @@
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input type="file" name="file" class="form-control border-0 shadow" />
-                    <label asp-for="Product.ImageUrl" class="ms-2"></label>
+                    <input type="file" name="files" class="form-control border-0 shadow" multiple/>
+                    <label asp-for="Product.Images" class="ms-2"></label>
                 </div>
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
@@ -82,7 +81,18 @@
             </div>
                 </div>
                 <div class="col-2">
-                    <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1xp solid #bbb9b9" />
+                    @if (Model.Product.Images != null)
+                    {
+                        foreach(var image in Model.Product.Images)
+                        {
+                            <div class="border p-1 m-2 text-center">
+                                <img src="@image.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+                                <a asp-action="DeleteImage" class="btn btn-danger" asp-route-imageId="@image.Id">
+                                    <i class="bi bi-trash-fill"></i> Delete
+                                </a>
+                            </div>
+                        }
+                    }
                 </div>
             </div>
         </form>
