--- a/EshopWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/EshopWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -22,8 +22,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                        <img src=@(string.IsNullOrEmpty(@Model.Product.ImageUrl) ? "https://placehold.co/500x600" : @Model.Product.ImageUrl) width="100%" class="rounded" />
-                    </div>
+@*                         <img src=@(string.IsNullOrEmpty(@Model.Product.ImageUrl) ? "https://placehold.co/500x600" : @Model.Product.ImageUrl) width="100%" class="rounded" />
+ *@                    </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
                         <div class="col-12 col-md-6 pb-4">
